# NclaveAI

./: .env.example  .gitignore  Dockerfile  FEATURE_MODEL_SELECTION.md  LICENSE  README.md  docker-compose.yml  executor.rego.example  flake.nix  generate_certs.sh  pyproject.toml  runs.json  sample-k8s-agent.yaml  skills.json
.devcontainer/: devcontainer.json
.github/workflows/: tests.yml
app/: api_keys.py  audit.py  auth.py  config.py  executor.py  llm_errors.py  main.py  models.py  mongo_repos.py  planner.py  policy.py  policy_test.py  runs.py  scheduled_tasks.py  secrets_store.py  settings_store.py  skills.py  teams.py  users.py  workflow.py
app/static/: index.html
docs/: HTTPS_SETUP.md  slides.md
docs/plans/: 2026-03-16-config-driven-tools-entrypoint.md  2026-03-16-unify-entrypoint.md  2026-03-31-per-conversation-skill-overrides.md  2026-03-31-run-persistence.md  (+5 more)
frontend/: index.html  package-lock.json  package.json  vite.config.js
policies/: executor.rego
tests/: conftest.py  helpers.py  test_api_keys.py  test_audit.py  test_audit_api.py  test_auth.py  test_config.py  test_executor.py  test_llm_error_api.py  test_llm_errors.py  test_main_auth.py  test_main_rbac.py  test_models.py  test_mongo_repos.py  test_planner.py  test_policy.py  test_policy_test_api.py  test_remote_skills.py  test_run_chaining.py  test_run_skills.py  test_runs.py  test_scheduled_tasks_api.py  test_scheduled_tasks_repo.py  test_secrets_store.py  test_settings_store.py  test_skills.py  test_teams.py  test_teams_api.py  test_users.py  test_webhook_api.py  test_workflow.py
(+29 files in other folders)
