[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "notesllm-agent"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "regopy>=1.2.0",
    "python-dotenv>=1.0.0",
    "PyJWT>=2.8.0",
    "bcrypt>=4.0.0",
    "pymongo>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "mongomock>=4.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
